--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,7 @@
     float: left;
     display: block;
     border-radius: 10px;
+
 }
 .customerViewFalse{
     height: 300px;
@@ -15,6 +16,7 @@
     float: left;
     display: block;
     border-radius: 10px;
+    box-shadow: 3px 3px 10px 0px rgb(214, 79, 79);
 
 }
 
