--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       <div class="ticketInfoR">
         <p>{{customer.firstName}} {{customer.lastName}}</p>
       </div>
-      <button class="error_view_button" type="submit">View</button>
+      <app-cutomer-details [customer]="customer"></app-cutomer-details>
     </form>
   </ng-template>
 </div>
