--- a/src/app/cutomer-details/cutomer-details.component.html
+++ b/src/app/cutomer-details/cutomer-details.component.html
@@ -1,6 +1,10 @@
-<div class="ticketInfoR">
+<div class="ticketInfoR" *ngIf = "!customer.customerStatus; else templateName" >
   <button class="error_view_button" type="button" (click)="toggleShow()" >{{customer.firstName}} {{customer.lastName}}</button>
+  
 </div>
+<ng-template #templateName>
+  <button class="services_view_button" type="button" (click)="toggleShow()" >{{customer.firstName}} {{customer.lastName}}</button>
+</ng-template>
 <div>
   <div *ngIf="show" style="width: 150px;">
     <table style="border: solid; width: 150px;">
@@ -12,3 +16,4 @@
     </table>
   </div>
 </div>
+
