incorrect view fixed

--- a/src/app/cutomer-details/cutomer-details.component.css
+++ b/src/app/cutomer-details/cutomer-details.component.css
@@ -5,6 +5,10 @@ tr.fail {
 tr.norm {
   background-color: lightgreen;
 }
+tr.maint{
+  background-color: lightyellow;
+
+}
 
 .error_view_button{
   text-decoration: none;
