--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,6 +23,18 @@
     border-radius: 10px;
     box-shadow: 3px 3px 10px 0px rgb(214, 79, 79);
 }
+.customerViewMaint{
+    height: 150px;
+    width: 150px;
+    background: yellow;
+    margin-left: 3%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    float: left;
+    display: block;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px 0px rgb(214, 79, 79);
+}
 
 
 
